@@ -1,12 +1,14 @@
 package rbasamoyai.createbigcannons.munitions.autocannon;
 
 import net.minecraft.ChatFormatting;
+import net.minecraft.core.NonNullList;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.nbt.Tag;
 import net.minecraft.network.chat.Component;
 import net.minecraft.network.chat.TextComponent;
 import net.minecraft.network.chat.TranslatableComponent;
 import net.minecraft.world.entity.EntityType;
+import net.minecraft.world.item.CreativeModeTab;
 import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.TooltipFlag;
@@ -84,6 +86,10 @@ public class AutocannonCartridgeItem extends Item implements AutocannonAmmoItem 
 		CompoundTag tag = stack.getOrCreateTag().getCompound("Projectile");
 		if (!tag.contains("tag", Tag.TAG_COMPOUND)) tag.put("tag", new CompoundTag());
 		tag.getCompound("tag").putBoolean("Tracer", true);
+	}
+
+	@Override
+	public void fillItemCategory(CreativeModeTab category, NonNullList<ItemStack> items) {
 	}
 
 }
